--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                         • Contributed to NIT Jalandhar's Training & Placement website
                     </div>
                     <div class="education-description" style="margin-bottom: 0.2cm;">
-                    <div class="section-title">Technical Skills</div>
+                    <!-- <div class="section-title">Technical Skills</div> -->
                         • Contributed In 2 conference websites (<a href="https://it1dxpert.org" target="_blank" style="color: #551a8b; text-decoration: none;">it1dxpert.org</a>, <a  href="https://eaicnitj.com" target="_blank" style="color: #551a8b; text-decoration: none;">eaicnitj.com</a>)
                     </div>
                     <div class="education-description">
