--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 <span class="separator">|</span>
                 <a href="https://github.com/deepnav4" target="_blank">GitHub</a>
                 <span class="separator">|</span>
-                <a href="https://navdeep-site.vercel.app" target="_blank">Portfolio</a>
+                <a href="https://navdeep.site" target="_blank">Portfolio</a>
             </div>
         </div>
 
@@ -420,7 +420,7 @@
                         <div class="job-title">Gym-Management System</div>
                         <div class="job-header">
                             <div class="company-name">Docker, NGINX, GitHub Actions, Node.js, React</div>
-                            <div class="job-date"><a href="https://gym-manangment.vercel.app" style="color: #551a8b; text-decoration: none;">Live</a> | <a href="https://github.com/deepnav4/Gym-Manangment" style="color: #551a8b; text-decoration: none;">GitHub</a></div>
+                            <div class="job-date"><a href="https://gymmanagement.navdeep.site" style="color: #551a8b; text-decoration: none;">Live</a> | <a href="https://github.com/deepnav4/Gym-Manangment" style="color: #551a8b; text-decoration: none;">GitHub</a></div>
                         </div>
                         <ul class="job-responsibilities">
                             <li>Designed and deployed a scalable gym management platform using a Dockerized microservices architecture.</li>
@@ -434,7 +434,7 @@
                         <div class="job-title">SnippetSync</div>
                         <div class="job-header">
                             <div class="company-name">React, Node.js, Redis, Docker</div>
-                            <div class="job-date"><a href="https://snippet-sync-orpin.vercel.app" style="color: #551a8b; text-decoration: none;">Live</a> | <a href="https://github.com/deepnav4/snippetSync" style="color: #551a8b; text-decoration: none;">GitHub</a></div>
+                            <div class="job-date"><a href="https://snippetsync.navdeep.site" style="color: #551a8b; text-decoration: none;">Live</a> | <a href="https://github.com/deepnav4/snippetSync" style="color: #551a8b; text-decoration: none;">GitHub</a></div>
                         </div>
                         <ul class="job-responsibilities">
                             <li>Developed a real-time collaborative code editor supporting live cursors and instant updates.</li>
