--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                         </div>
                         <div class="skill-item">
                             <div class="skill-name">DevOps</div>
-                            <div style="font-size: 9pt; margin-bottom: 6px; color: #333333;">Docker, Kubernetes, NGINX, GitHub Actions, AWS EC2</div>
+                            <div style="font-size: 9pt; margin-bottom: 6px; color: #333333;">Docker, NGINX, GitHub Actions, AWS EC2, Prometheus, Grafana, Kafka</div>
                         </div>
                     </div>
                 </div>
@@ -417,9 +417,22 @@
                     <div class="section-title">Projects</div>
                     
                     <div class="work-experience-item">
+                        <div class="job-title">SnippetSync</div>
+                        <div class="job-header">
+                            <div class="company-name">React, Node.js, Redis, Docker</div>
+                            <div class="job-date"><a href="https://snippetsync.navdeep.site" style="color: #551a8b; text-decoration: none;">Live</a> | <a href="https://github.com/deepnav4/snippetSync" style="color: #551a8b; text-decoration: none;">GitHub</a></div>
+                        </div>
+                        <ul class="job-responsibilities">
+                            <li>Built IDE extensions for seamless code synchronization across development environments.</li>
+                            <li>Implemented distributed caching with Redis for efficient data retrieval and session management.</li>
+                            <li>Containerized application using Docker to ensure consistent deployments across multiple environments.</li>
+                        </ul>
+                    </div>
+
+                    <div class="work-experience-item">
                         <div class="job-title">Gym-Management System</div>
                         <div class="job-header">
-                            <div class="company-name">Docker, NGINX, GitHub Actions, Node.js, React</div>
+                            <div class="company-name">Docker, GitHub Actions, Node.js, React</div>
                             <div class="job-date"><a href="https://gymmanagement.navdeep.site" style="color: #551a8b; text-decoration: none;">Live</a> | <a href="https://github.com/deepnav4/Gym-Manangment" style="color: #551a8b; text-decoration: none;">GitHub</a></div>
                         </div>
                         <ul class="job-responsibilities">
@@ -427,19 +440,6 @@
                             <li>Implemented automated CI/CD workflows via GitHub Actions to streamline deployment.</li>
                             <!-- <li>Configured NGINX as a reverse proxy and load balancer.</li> -->
                             <li>Developed dashboards for members and trainers with real-time analytics.</li>
-                        </ul>
-                    </div>
-
-                    <div class="work-experience-item">
-                        <div class="job-title">SnippetSync</div>
-                        <div class="job-header">
-                            <div class="company-name">React, Node.js, Redis, Docker</div>
-                            <div class="job-date"><a href="https://snippetsync.navdeep.site" style="color: #551a8b; text-decoration: none;">Live</a> | <a href="https://github.com/deepnav4/snippetSync" style="color: #551a8b; text-decoration: none;">GitHub</a></div>
-                        </div>
-                        <ul class="job-responsibilities">
-                            <li>Developed a real-time collaborative code editor supporting live cursors and instant updates.</li>
-                            <li>Integrated Redis Pub/Sub to distribute events across scalable backend instances.</li>
-                            <li>Created a companion VS Code extension for syncing code edits from the IDE.</li>
                         </ul>
                     </div>
 
